Add a crude architecture diagram

--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -5,7 +5,11 @@
 
 \section{Used Libraries and the Framework gloperate}
 
-\todo[color=green]{software architecture?}
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{graphics/Architecture}
+  \caption{svg image}
+\end{figure}
 
 \begin{outline}
 \1 some architecture diagram of dependencies?
