Lots of work for introductionGI. basically finished except it's still bullet points and the theory part is missing.

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -44,7 +44,7 @@ VPL sampling has not been the focus of this thesis, therefore we use a rather ba
 
 \end{outline}
 
-\section{Solving Occlusion with Imperfect Shadow Maps}
+\section{Visibility Computation with Imperfect Shadow Maps}
 \label{sec:ISM}
 
 
