--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -877,7 +877,8 @@ year = {2016},
 author = {Jorge Jiménez},
 title = {Practical Real-Time Strategies for Accurate Indirect Occlusion },
 howpublished = {Presentation at SIGGRAPH 2016},
-year = {2015}
+year = {2016},
+url = {http://blog.selfshadow.com/publications/s2016-shading-course/activision/s2016_pbs_activision_occlusion.pdf}
 }
 
 @online{McGuire2011Data,
@@ -899,7 +900,7 @@ abstract = {Efficient and flexible lighting remains a challenge in modern game e
 This session introduces the latest academic research on this technique, then reviews the adapted version of the technique that is currently in production at Avalanche Studios and the key differences between the implementations and their implications.},
 }
 
-@article{Ritschel:2012:SAI:2283296.2283310,
+@article{Ritschel:2012:GISTAR,
  author = {Ritschel, Tobias and Dachsbacher, Carsten and Grosch, Thorsten and Kautz, Jan},
  title = {The State of the Art in Interactive Global Illumination},
  journal = {Comput. Graph. Forum},
@@ -917,4 +918,66 @@ This session introduces the latest academic research on this technique, then rev
  publisher = {Elsevier North-Holland, Inc.},
  address = {Amsterdam, The Netherlands, The Netherlands},
  keywords = {Colour, shading, shadowing, and texture/Radiosity/Raytracing, I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism:, global illumination, image synthesis, interactive rendering, photon mapping, radiosity, ray tracing, real-time rendering, volume rendering},
-} 
+}
+
+@misc{reed:2012:mediumAO,
+author = {Nathan Reed},
+title = {Ambient Occlusion Fields and Decals in Infamous 2},
+howpublished = {Presentation at GDC 2012},
+year = {2012},
+url = {http://www.gdcvault.com/play/1015320/Ambient-Occlusion-Fields-and-Decals}
+}
+
+@article{sloan:2002:PRT,
+author = {Sloan, Peter-Pike and Kautz, Jan and Snyder, John},
+title = {Precomputed Radiance Transfer for Real-time Rendering in Dynamic, Low-frequency Lighting Environments},
+journal = {ACM Trans. Graph.},
+issue_date = {July 2002},
+volume = {21},
+number = {3},
+month = jul,
+year = {2002},
+issn = {0730-0301},
+pages = {527--536},
+numpages = {10},
+url = {http://doi.acm.org/10.1145/566654.566612},
+doi = {10.1145/566654.566612},
+acmid = {566612},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {Monte Carlo techniques, graphics hardware, illumination, rendering, shadow algorithms},
+}
+
+@misc{stefanov:2012:PRTinFarCry3,
+author = {Nikolay Stefanov},
+title = {Deferred Radiance Transfer Volumes: Global Illumination in Far Cry 3},
+howpublished = {Presentation at GDC 2012},
+year = {2012},
+url = {http://www.gdcvault.com/play/1015326/Deferred-Radiance-Transfer-Volumes-Global}
+}
+
+@inproceedings{Ritschel:2009:SSDO,
+ author = {Ritschel, Tobias and Grosch, Thorsten and Seidel, Hans-Peter},
+ title = {Approximating Dynamic Global Illumination in Image Space},
+ booktitle = {Proceedings of the 2009 Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '09},
+ year = {2009},
+ isbn = {978-1-60558-429-4},
+ location = {Boston, Massachusetts},
+ pages = {75--82},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1507149.1507161},
+ doi = {10.1145/1507149.1507161},
+ acmid = {1507161},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {constant time, global illumination, radiosity},
+}
+
+@misc{Hoffman:2015:PhysicsOfShading,
+author = {Naty Hoffman},
+title = {Physics and Math of Shading},
+howpublished = {Presentation at SIGGRAPH 2015},
+year = {2015},
+url = {http://blog.selfshadow.com/publications/s2015-shading-course/hoffman/s2015_pbs_physics_math_slides.pdf}
+}
