Fancier concept pipeline

--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -2,6 +2,10 @@
 
 \chapter{Introduction to Global Illumination and Previous Work}
 
+\todo[color=green]{how much reading and correction of actual text by you}
+\todo[color=green]{sign off this chapter}
+
+
 \section{A High-Level Overview of Lighting in Computer Graphics}
 \begin{outline}
 
